// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LockPinCodeEnter /> redirect to home screen is app is locked and there are no pending redirection 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "height": "100%",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": 63.52941176470588,
        "paddingTop": 19.058823529411764,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityLabel="left-icon"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "width": "15%",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "85%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#777777",
            "fontFamily": "System",
            "fontSize": 21.057142857142857,
            "marginLeft": -47.85714285714286,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "flex": 1,
        }
      }
      tertiary={true}
    >
      <View
        center={true}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      />
      <View
        accessibilityLabel="pin-code-input-boxes-touchable"
        accessible={false}
        center={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 20,
            "left": 20,
            "right": 20,
            "top": 20,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginBottom": 40,
            "marginTop": 40,
            "minHeight": 30,
          }
        }
        testID="pin-code-input-boxes-touchable"
      >
        <Text
          accessibilityLabel="Enter passcode"
          accessible={true}
          allowFontScaling={false}
          style={
            Array [
              Object {
                "fontSize": 19,
              },
              Object {
                "fontFamily": "System",
              },
              Object {
                "backgroundColor": "#ffffff",
                "color": "#777777",
              },
              Object {
                "fontWeight": "800",
              },
              Object {
                "textAlign": "center",
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              Object {
                "fontFamily": "System",
                "fontSize": 26,
                "fontStyle": "normal",
                "fontWeight": "700",
                "letterSpacing": 0.5,
                "lineHeight": 31,
                "minHeight": 49.23529411764706,
              },
            ]
          }
          testID="pass-code-input-text"
        >
          Enter passcode
        </Text>
      </View>
      <View
        center={true}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            row={true}
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityLabel="pin-code-digit-0-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-0-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-1-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-1-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-2-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-2-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-3-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-3-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-4-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-4-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-5-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-5-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
          </View>
          <TextInput
            accessibilityLabel="pin-code-input-box"
            accessible={true}
            allowFontScaling={true}
            autoCorrect={false}
            blurOnSubmit={false}
            editable={true}
            enablesReturnKeyAutomatically={false}
            keyboardAppearance="dark"
            keyboardType="number-pad"
            maxLength={6}
            onChangeText={[Function]}
            rejectResponderTermination={true}
            style={
              Object {
                "height": 0,
                "position": "absolute",
                "right": -999,
                "width": 0,
              }
            }
            testID="pin-code-input-box"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<LockPinCodeEnter /> should render pin code box 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "height": "100%",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": 63.52941176470588,
        "paddingTop": 19.058823529411764,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityLabel="left-icon"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "width": "15%",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "85%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#777777",
            "fontFamily": "System",
            "fontSize": 21.057142857142857,
            "marginLeft": -47.85714285714286,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "flex": 1,
        }
      }
      tertiary={true}
    >
      <View
        center={true}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      />
      <View
        accessibilityLabel="pin-code-input-boxes-touchable"
        accessible={false}
        center={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 20,
            "left": 20,
            "right": 20,
            "top": 20,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginBottom": 40,
            "marginTop": 40,
            "minHeight": 30,
          }
        }
        testID="pin-code-input-boxes-touchable"
      >
        <Text
          accessibilityLabel="Enter your passcode"
          accessible={true}
          allowFontScaling={false}
          style={
            Array [
              Object {
                "fontSize": 19,
              },
              Object {
                "fontFamily": "System",
              },
              Object {
                "backgroundColor": "#ffffff",
                "color": "#777777",
              },
              Object {
                "fontWeight": "800",
              },
              Object {
                "textAlign": "center",
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              Object {
                "fontFamily": "System",
                "fontSize": 26,
                "fontStyle": "normal",
                "fontWeight": "700",
                "letterSpacing": 0.5,
                "lineHeight": 31,
                "minHeight": 49.23529411764706,
              },
            ]
          }
          testID="pass-code-input-text"
        >
          Enter your passcode
        </Text>
      </View>
      <View
        center={true}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            row={true}
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityLabel="pin-code-digit-0-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-0-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-1-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-1-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-2-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-2-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-3-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-3-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-4-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-4-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-5-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-5-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
          </View>
          <TextInput
            accessibilityLabel="pin-code-input-box"
            accessible={true}
            allowFontScaling={true}
            autoCorrect={false}
            blurOnSubmit={false}
            editable={true}
            enablesReturnKeyAutomatically={false}
            keyboardAppearance="dark"
            keyboardType="number-pad"
            maxLength={6}
            onChangeText={[Function]}
            rejectResponderTermination={true}
            style={
              Object {
                "height": 0,
                "position": "absolute",
                "right": -999,
                "width": 0,
              }
            }
            testID="pin-code-input-box"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<LockPinCodeEnter /> should show 'Enter passcode' message if there is no existing pin 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "height": "100%",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": 63.52941176470588,
        "paddingTop": 19.058823529411764,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityLabel="left-icon"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "width": "15%",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "85%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#777777",
            "fontFamily": "System",
            "fontSize": 21.057142857142857,
            "marginLeft": -47.85714285714286,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "flex": 1,
        }
      }
      tertiary={true}
    >
      <View
        center={true}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      />
      <View
        accessibilityLabel="pin-code-input-boxes-touchable"
        accessible={false}
        center={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 20,
            "left": 20,
            "right": 20,
            "top": 20,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginBottom": 40,
            "marginTop": 40,
            "minHeight": 30,
          }
        }
        testID="pin-code-input-boxes-touchable"
      >
        <Text
          accessibilityLabel="Enter passcode"
          accessible={true}
          allowFontScaling={false}
          style={
            Array [
              Object {
                "fontSize": 19,
              },
              Object {
                "fontFamily": "System",
              },
              Object {
                "backgroundColor": "#ffffff",
                "color": "#777777",
              },
              Object {
                "fontWeight": "800",
              },
              Object {
                "textAlign": "center",
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              Object {
                "fontFamily": "System",
                "fontSize": 26,
                "fontStyle": "normal",
                "fontWeight": "700",
                "letterSpacing": 0.5,
                "lineHeight": 31,
                "minHeight": 49.23529411764706,
              },
            ]
          }
          testID="pass-code-input-text"
        >
          Enter passcode
        </Text>
      </View>
      <View
        center={true}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            row={true}
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityLabel="pin-code-digit-0-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-0-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-1-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-1-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-2-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-2-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-3-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-3-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-4-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-4-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-5-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-5-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
          </View>
          <TextInput
            accessibilityLabel="pin-code-input-box"
            accessible={true}
            allowFontScaling={true}
            autoCorrect={false}
            blurOnSubmit={false}
            editable={true}
            enablesReturnKeyAutomatically={false}
            keyboardAppearance="dark"
            keyboardType="number-pad"
            maxLength={6}
            onChangeText={[Function]}
            rejectResponderTermination={true}
            style={
              Object {
                "height": 0,
                "position": "absolute",
                "right": -999,
                "width": 0,
              }
            }
            testID="pin-code-input-box"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<LockPinCodeEnter /> should show UNLOCKING_APP_WAIT_MESSAGE  1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "height": "100%",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": 63.52941176470588,
        "paddingTop": 19.058823529411764,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityLabel="left-icon"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "width": "15%",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "85%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#777777",
            "fontFamily": "System",
            "fontSize": 21.057142857142857,
            "marginLeft": -47.85714285714286,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "flex": 1,
        }
      }
      tertiary={true}
    >
      <View
        center={true}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      />
      <View
        accessibilityLabel="pin-code-input-boxes-touchable"
        accessible={false}
        center={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 20,
            "left": 20,
            "right": 20,
            "top": 20,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginBottom": 40,
            "marginTop": 40,
            "minHeight": 30,
          }
        }
        testID="pin-code-input-boxes-touchable"
      >
        <Text
          accessibilityLabel="Loading please wait..."
          accessible={true}
          allowFontScaling={false}
          style={
            Array [
              Object {
                "fontSize": 19,
              },
              Object {
                "fontFamily": "System",
              },
              Object {
                "backgroundColor": "#ffffff",
                "color": "#777777",
              },
              Object {
                "fontWeight": "800",
              },
              Object {
                "textAlign": "center",
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              Object {
                "fontFamily": "System",
                "fontSize": 26,
                "fontStyle": "normal",
                "fontWeight": "700",
                "letterSpacing": 0.5,
                "lineHeight": 31,
                "minHeight": 49.23529411764706,
              },
            ]
          }
          testID="pass-code-input-text"
        >
          Loading please wait...
        </Text>
      </View>
      <View
        center={true}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            row={true}
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityLabel="pin-code-digit-0-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-0-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-1-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-1-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-2-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-2-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-3-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-3-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-4-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-4-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
            <View
              accessibilityLabel="pin-code-digit-5-touchable"
              accessible={false}
              center={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 66,
                  "justifyContent": "center",
                  "marginHorizontal": 5,
                  "width": 38,
                }
              }
              testID="pin-code-digit-5-touchable"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#EAEAEA",
                    "borderRadius": 20,
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </View>
          </View>
          <TextInput
            accessibilityLabel="pin-code-input-box"
            accessible={true}
            allowFontScaling={true}
            autoCorrect={false}
            blurOnSubmit={false}
            editable={true}
            enablesReturnKeyAutomatically={false}
            keyboardAppearance="dark"
            keyboardType="number-pad"
            maxLength={6}
            onChangeText={[Function]}
            rejectResponderTermination={true}
            style={
              Object {
                "height": 0,
                "position": "absolute",
                "right": -999,
                "width": 0,
              }
            }
            testID="pin-code-input-box"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
